[project]
name = "llm-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "Rachun Charoenpong"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama (>=0.5.1,<0.6.0)",
    "requests (>=2.32.4,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

